# heap-analyzer

./: .eslintrc.json  .gitignore  .mcp.json  CLAUDE.md  PROMPT-F3-S03.md  PROMPT-F3-S04.md  PROMPT-F3-S05.md  README.md  mypy.ini  package-lock.json  package.json  prepara-coda.ps1  vitest.config.ts
python-engine/: pyproject.toml  ruff.toml
python-engine/scripts/: benchmark.py
python-engine/src/heap_analyzer/: __init__.py  cli.py  config.py  pipeline.py  test_data_generator.py
python-engine/src/heap_analyzer/classification/: vlm_service.py
python-engine/src/heap_analyzer/comparison/: config.py  matcher.py  palette.py
python-engine/src/heap_analyzer/export/: csv_export.py  geo_export.py  heatmap_generator.py  pointcloud_export.py  tile_generator.py
python-engine/src/heap_analyzer/io/: dji_terra_scanner.py  las_reader.py  tiff_reader.py
python-engine/src/heap_analyzer/processing/: cross_section.py  dsm.py  dtm.py  ground_sampling.py  polygon_ops.py  segmentation.py  volume.py
python-engine/src/heap_analyzer/report/: __init__.py  charts.py  formatting.py  map_renderer.py  palette.py  pdf_generator.py
python-engine/src/heap_analyzer/tests/: test_base_elevation.py  test_cli.py  test_cross_section.py  test_csv_export.py  test_data_generator.py  test_dsm.py  test_dtm.py  test_ipc_hygiene.py  test_las_reader.py  test_map_renderer.py  test_matcher.py  test_pdf_generator.py  test_pipeline.py  test_pointcloud_export.py  test_polygon_ops.py  test_segmentation.py  test_tiff_reader.py  test_vlm_service.py  test_volume.py  test_volume_recompute.py
python-engine/tests/: test_benchmark.py  test_dji_terra_e2e.py  test_dji_terra_scanner.py  test_dtm_ground_classification.py  test_error_handling.py  test_geo_export.py  test_logging.py  test_tile_generator.py
(+136 files in other folders)
